--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<input type="number" id="debt-to-income" name="debt-to-income" pattern="[0-9]+([\.][0-9]+)?" required>
 
 			<label for="interest">Interest Rate</label>
-			<input type="number" id="interest" name="interest" pattern="[0-9]+([\.][0-9]+)?" required>
+			<input type="number" id="interest" name="interest" min="0" max="100" step="0.01" value="4.5" required>
 
 			<label for="term">Loan Term (years)</label>
 			<input type="number" id="term" name="term" pattern="[0-9]+([\.][0-9]+)?" required>
